# simple_social

./: .gitignore  Dockerfile  README.md  dev.yml  docker-compose.yml  example.env  pyproject.toml
apps/core/models/: base.py
apps/create_post/: apps.py
apps/create_post/api/: __init__.py  create_post.py  post_detail.py
apps/create_post/urls/: __init__.py
apps/post/celery/: timeline.py
apps/post/core/: timeline.py
apps/post/migrations/: 0001_initial.py  0002_post_uuid.py  0003_alter_post_uuid.py  0004_postimage_uuid_posttags_uuid.py  0005_alter_postimage_uuid_alter_posttags_uuid.py  0006_alter_postimage_image.py
apps/post/models/: post.py
apps/post/serializers/: post_serializer.py
apps/relations/api/: friend_recommendation.py  friend_request.py
apps/relations/celery/: __init__.py  friend_request.py  update_post.py  update_user.py
apps/relations/core/: is_friend.py
apps/relations/migrations/: 0001_initial.py  0002_alter_friendrequest_action_taken.py  0003_alter_friendrequest_uuid.py  0004_remove_friendrequest_deleted_at.py  0005_alter_friendrequest_unique_together.py  0006_friendrequest_unfriend_friendrequest_unfriend_on.py  0007_alter_friendrequest_uuid.py
apps/relations/models/: __init__.py
apps/relations/serializers/: friend_recommendation.py  friend_request.py
apps/retrieve_post/: apps.py
apps/user/: admin.py  urls.py
simple_social/: celery.py  settings.py  urls.py
simple_social/migrations/: 0001_initial.py  0002_user_country_code_user_phone_number.py  0003_user_uuid.py  0004_alter_user_uuid.py
simple_social/models/: user.py
(+16 files in other folders)
